switched to old develpr theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,26 @@
-{% include header.html %}
+---
+layout: compress
+---
 
-<div class="wrap">
-    <div class="container container-left">
-        <div class="row">
-            <div class="col-md-3 hidden-xs">
-                {% include sidebar.html %}
-            </div>
-            <div class="col-md-9">
-                {{ content }}
-            </div>
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: " en " }}">
+
+{%- include head.html -%}
+
+<body>
+    <div class="container-fluid">
+
+        {%- include header.html -%}
+
+        <div class="col-lg-12">
+          
+            {{ content }}
+
         </div>
-    </div>
 
-    {% include footer.html %}
-</div>
+        {%- include footer.html -%}
+
+    </div>
+</body>
+
+</html>
