--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,9 @@
-{% assign trans = site.data.values[site.lan] %}
-<div class="footer">
-    <p>&copy;{{ site.time | date: '%Y' }} {{ site.name }}{{ trans.thanks }}
-            {% for thank in site.data.thanks %}
-                <a href="{{ thank.url }}">
-                {{ thank.title }}
-                </a>
-                <!-- not the last, output a ',' -->
-                {% if forloop.last == false %}
-                ,
-                {% endif %}
-            {% endfor %}
-    </p>
-</div>
 
-<!-- 
-    {% include disqus-counts.html %}
-    {% include analytics.html %} 
--->
+<footer>
 
-</body>
-</html>
+    <p> © 2020 CrazyChenz | Subscribe via <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a></p>
+
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
