--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,50 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
+<header>
 
-<head>
-    <meta charset="UTF-8">
-    <title>{{ site.name }}</title>
-	<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
-    <link href="{{ site.baseurl }}/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.baseurl }}/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!--[if IE 7]>
-    <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css">
-    <![endif]-->
-    <!--[if lt IE 9]>
-       <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
-    <![endif]-->
-    <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" type="text/css">
-{% include isso-comments.html %}
-</head>
-
-<body>
-
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
+    <div class="col-lg-12">
+        <div class="row">
+            <div class="col-md-2 center">
+                <a href="/">
+                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
+                </a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    {% assign trans = site.data.values[site.lan] %}
-                    <li class="active"><a href="{{ site.baseurl }}/">{{ trans.home }}</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/archive.html">{{ trans.archive }}</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/categories.html">{{ trans.categories }}</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/tags.html">{{ trans.tags }}</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/about.html">{{ trans.about }}</a></li>
-                </ul>
+          
+            <div class="col-md-4" id="author_details">
+                <h1 class="profile-name"> {{ site.title }}</h1>
+                <p class="profile-bio"> {{ site.subtitle }}</p>
+                <p class="profile-links">
+                    {% if site.twitter_username %}
+                    <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.facebook_username %}
+                    <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.instagram_username %}
+                    <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.medium_username %}
+                    <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
+                        <i class="fab fa-medium-m"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.github_username %}
+                    <a class="social-link" href="http://github.com/{{ site.github_username }}">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.behance_username %}
+                    <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.linkedin_username %}
+                    <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    {% endif %}
+                    {% if site.telegram_username %}
+                    <a class="social-link" href="http://t.me/{{ site.telegram_username }}">
+                        <i class="fab fa-telegram-plane"></i>
+                    </a>
+                    {% endif %}
+                </p>
+
+            </div>
+            <div class="col-md-6 center">
+     
+                    <ul class="nav justify-content-end" id="navigation">
+                    {% for i in site.urls %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ i.url }}">{{ i.text }}</a>
+                    </li>
+                     {% endfor %}
+                    </ul>
+      
             </div>
         </div>
     </div>
-</div>
+
+</header>
