--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -6,13 +6,13 @@
             <!-- Your Bio -->
             <p> {{ site.author_bio }}</p>
 
-            {%- include github_star_button.html -%}
+	    {# %- include github_star_button.html -% #}
         </div>
     </div>
     <div class="card">
-        <div class="card-header">Categories </div>
+        <div class="card-header">Links </div>
         <div class="card-body text-dark">
-            {%- include blog_categories.html -%}
+            {%- include blog_links.html -%}
         </div>
     </div>
 </div>
